--- a/SuperLongInt/SuperLongInt.vcxproj.filters
+++ b/SuperLongInt/SuperLongInt.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="WideNum1.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Timer.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
