--- a/SuperLongInt/SuperLongInt.vcxproj
+++ b/SuperLongInt/SuperLongInt.vcxproj
@@ -113,6 +113,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="SLI.cpp" />
+    <ClCompile Include="Timer.cpp" />
     <ClCompile Include="WideNum.cpp" />
     <ClCompile Include="WideNum1.cpp" />
   </ItemGroup>
