--- a/SuperLongInt/SuperLongInt.vcxproj
+++ b/SuperLongInt/SuperLongInt.vcxproj
@@ -116,6 +116,10 @@
     <ClCompile Include="WideNums.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="WideInt.cpp" />
+    <ClCompile Include="WideNumType.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="wideint.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
