--- a/SuperLongInt/SuperLongInt.vcxproj.filters
+++ b/SuperLongInt/SuperLongInt.vcxproj.filters
@@ -24,5 +24,13 @@
     <ClCompile Include="WideNums.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="WideNumType.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="wideint.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
