--- a/SuperLongInt/SuperLongInt.vcxproj.filters
+++ b/SuperLongInt/SuperLongInt.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="wideint.h">
       <Filter>Заголовочные файлы</Filter>
     </ClInclude>
+    <ClInclude Include="Timer.h">
+      <Filter>Заголовочные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
