--- a/SuperLongInt/SuperLongInt.vcxproj
+++ b/SuperLongInt/SuperLongInt.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="WideNumType.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Timer.h" />
     <ClInclude Include="wideint.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
